<resources>
    <string name="app_name">XinFu</string>

    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="title_activity_demo9">Demo9Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="list">
        <item>aaa</item>
        <item>aaa</item>
        <item>aa</item>
        <item>a</item>
        <item>bbb</item>
        <item>bbb</item>
        <item>bb</item>
        <item>b</item>
        <item>ccc</item>
        <item>ccc</item>
        <item>cc</item>
        <item>c</item>
        <item>ddd</item>
        <item>ddd</item>
        <item>dd</item>
        <item>d</item>
        <item>eee</item>
        <item>eee</item>
        <item>ee</item>
        <item>e</item>
        <item>fff</item>
        <item>fff</item>
        <item>ff</item>
        <item>f</item>
    </string-array>
</resources>
